Closed
Bug 355246
Opened 18 years ago
Closed 18 years ago
Crash loading testcase from bug 197956
Categories
(Core :: XSLT, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: bzbarsky, Unassigned)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression)
Attachments
(1 file)
735 bytes,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
This is a regression from bug 221335. Load jar:https://bugzilla.mozilla.org/attachment.cgi?id=117559!/Nested_Chapter_Test.xml and watch Gecko crash.
The problem is:
(gdb) frame 1
#1 0xb6741391 in txMozillaXMLOutput::startElementInternal (this=0x87c7860, aPrefix=0x0,
aLocalName=0x80b7658, aNsID=3, aElemType=3)
at ../../../../../mozilla/content/xslt/src/xslt/txMozillaXMLOutput.cpp:546
546 rv = mNodeInfoManager->GetNodeInfo(aLocalName, aPrefix, aNsID,
(gdb) p mNodeInfoManager
$1 = {mRawPtr = 0x0}
Comment 1•18 years ago
|
||
Attachment #241078 -
Flags: superreview?(bugmail)
Attachment #241078 -
Flags: review?(bugmail)
Attachment #241078 -
Flags: superreview?(bugmail)
Attachment #241078 -
Flags: superreview+
Attachment #241078 -
Flags: review?(bugmail)
Attachment #241078 -
Flags: review+
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Keywords: crash,
regression
![]() |
Reporter | |
Comment 2•18 years ago
|
||
*** Bug 355340 has been marked as a duplicate of this bug. ***
No longer blocks: 355340
Comment 3•18 years ago
|
||
Verified FIXED; when I load jar:https://bugzilla.mozilla.org/attachment.cgi?id=117559!/Nested_Chapter_Test.xml I see the XML document in its tree structure, just fine.
Build: 2006-10-05-08 of Windows XP SeaMonkey trunk.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•