Fix for bug 355246 (Crash loading testcase from bug 197956). r/sr=sicking.