content/xslt/src/xslt/txMozillaXMLOutput.cpp
@@ -123,7 +123,10 @@ txMozillaXMLOutput::txMozillaXMLOutput(txOutputFormat* aFormat,
 
     mCurrentNode = do_QueryInterface(aFragment);
     mDocument = mCurrentNode->GetOwnerDoc();
-    if (!mDocument) {
+    if (mDocument) {
+      mNodeInfoManager = mDocument->NodeInfoManager();
+    }
+    else {
       mCurrentNode = nsnull;
     }
 }
